--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -1,7 +1,8 @@
 FROM eclipse-temurin:25-jdk-alpine
-VOLUME /tmp
+RUN addgroup -S appgroup && adduser -S appuser -G appgroup
+WORKDIR /app
 COPY *.jar PruebaGCP.jar
 ENV JAVA_OPTS=" -Xshareclasses:name=cacheapp,cacheDir=/cache,nonfatal -XX:+UseContainerSupport -XX:MaxRAMPercentage=70 -Djava.security.egd=file:/dev/./urandom"
-# Replace with a non-root user to avoid running the container with excessive privileges
+EXPOSE 8080
 USER appuser
 ENTRYPOINT [ "/bin/sh", "-c", "/opt/java/openjdk/bin/java $JAVA_OPTS  -jar /PruebaGCP.jar" ]
