--- a/deployment/cloudbuild.yaml
+++ b/deployment/cloudbuild.yaml
@@ -3,7 +3,7 @@ options:
 timeout: "1800s"  # 30 minutos
 substitutions:
   _REGION: "us-east1"
-  _PROJECT_ID: "TU_PROJECT_ID"       # reemplaza con tu project id
+  _PROJECT_ID: "attetioncore-dev"       # reemplaza con tu project id
   _REPO_NAME: "springboot-repo"
   _IMAGE_NAME: "pruebagcp-app"
   _GKE_CLUSTER: "autopilot-cluster-1"
