--- a/deployment/cloudbuild.yaml
+++ b/deployment/cloudbuild.yaml
@@ -10,12 +10,14 @@ substitutions:
 
 steps:
   # Build Gradle (usa JDK 25)
-  - name: 'gradle:9.0-jdk25'
-    entrypoint: 'bash'
+  - name: eclipse-temurin:25-jdk-alpine
+    entrypoint: sh
     args:
-      - '-c'
-      - './gradlew clean build --no-daemon'
-    id: 'Gradle Build'
+      - -c
+      - |
+        apk add --no-cache bash curl unzip
+        ./gradlew clean build --no-daemon
+    id: Gradle Build
 
   # Build Docker image (multi-stage con Java 25 y Gradle)
   - name: 'gcr.io/cloud-builders/docker'
