--- a/applications/app-service/build.gradle
+++ b/applications/app-service/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'org.springframework.boot'
 
 dependencies {
+	testImplementation 'com.fasterxml.jackson.core:jackson-databind'
 	implementation project(':reactive-web')
     implementation project(':model')
     implementation project(':usecase')
