--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -1,7 +1,7 @@
 FROM eclipse-temurin:25-jdk-alpine
 RUN addgroup -S appgroup && adduser -S appuser -G appgroup
 WORKDIR /app
-COPY *.jar PruebaGCP.jar
+COPY build/libs/*.jar PruebaGCP.jar
 ENV JAVA_OPTS=" -Xshareclasses:name=cacheapp,cacheDir=/cache,nonfatal -XX:+UseContainerSupport -XX:MaxRAMPercentage=70 -Djava.security.egd=file:/dev/./urandom"
 EXPOSE 8080
 USER appuser
